--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>strained</title>  
-<script src="libraries/p5.min.js"></script>
+<script src="./p5.min.js"></script>
   </head>
   <body>
     <script src="sketch.js"></script>
